// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders a card with a primary title 1`] = `
<div
  className="card"
>
  <div
    style={
      Object {
        "paddingBottom": "16px",
        "paddingLeft": "16px",
        "paddingRight": "16px",
        "paddingTop": "16px",
      }
    }
  >
    <h2
      className="card-primarytitle title-l"
    >
      Card Title
    </h2>
  </div>
</div>
`;

exports[`Card renders a card with a primary title and a divider 1`] = `
<div
  className="card"
>
  <div
    style={
      Object {
        "paddingBottom": "16px",
        "paddingLeft": "16px",
        "paddingRight": "16px",
        "paddingTop": "16px",
      }
    }
  >
    <h2
      className="card-primarytitle title-l"
    >
      Card Title
    </h2>
  </div>
  <div
    className="card-divider"
  />
</div>
`;

exports[`Card renders an empty card 1`] = `
<div
  className="card"
/>
`;
